Version 2.13.1 Tom Schoonjans

-Corrected radrate database: 2.13.0 was using scofield for K and campbell for
L instead of Krause data
-"make clean" now works properly


Version 2.13.0 Tom Schoonjans

-Expanded the radrate database (150 linetypes available now, including M lines)
-More line energies: the new database was calculated using the edge energy
database and contains every theoretical possible transition. 381 linetypes are
available
-Kissel database fixes: since the Kissel edge energies do not correspond to
the ones found in the edge energy database this could lead to unpredictable
behaviour near the edges. This has been fixed by using the Kissel calculated
edge energies.
-Compound parser: we have added a parser for compounds which will determine
information such as number of different elements, number of atoms per element
and weight fractions. This parser has been coupled with several cross section
functions.
-Refractive indices: we added two functions that calculate the real and
imaginary parts of the refractive index of a given compound.
-Numerous bugfixes: an important one would be the restoration of IDL support
on Mac OS X Snow Leopard
-Creation of IDL bindings rpm
-Added Java bindings (requires Sun JAVA compiler): works on Linux and Mac Os X
-Verified support on FreeBSD 8.0 64-bit

Version 2.12.1 Tom Schoonjans

Fixed bug in installation scripts that caused the perl and IDL bindings
compilation phase to fail under certain circumstances

Version 2.12 Tom Schoonjans 

Build system has changed completely: the new system is based on autoconf,
automake and libtool. Tests were conducted on different systems using
different compilers. An overview:
C-library: linux (Fedora 10 (gcc 4.3.2) and 11 (gcc 4.4.0), both 64-bit), Mac OS X (Leopard (gcc 4.0.1 and gcc 4.4.0) Intel 32-bit), Solaris 10 (Sun C 5.10 32-bit)