@@ -3,6 +3,7 @@ Version 2.13.1 Tom Schoonjans
 -Corrected radrate database: 2.13.0 was using scofield for K and campbell for
 L instead of Krause data
 -"make clean" now works properly
+-Added NSIS script to produce a Windows installer
 
 
 Version 2.13.0 Tom Schoonjans
